force-app/main/default/objects/geopointe__Check_In__c/geopointe__Check_In__c.object-meta.xml
<CustomObject>
    <description>This object contains the history of Check-Ins made through the Geopointe Mobile application as well as records loaded in via Apex or manually by the customer.  The object is intended to document a Who, What, Where, When and Why.

- Who = A lookup relationship to a User record.

- What = Another record that the check-in is linked to.  This holds the record Id.

- Where = A latitude and longitude describing the location of the check-in

- When = A date/time stamp for the check in.

- Why = A type field (values editable by the customer) and an optional comments field help describe why a check-in took place.  Customers can also extend the object to add additional fields.</description>
    <label>Geopointe Check-In</label>
    <nameField>
        <displayFormat>CHK_IN-{00000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Check-Ins</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>