force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Account__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Check-Ins</relationshipLabel>
    <relationshipName>Check_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>