force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Accuracy_Check_In_m__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Accuracy_Check_In_m__c</fullName>
    <inlineHelpText>Approximate accuracy of the Check In position in meters. This is the highest margin of error reported by the device, results are typically much more accurate than value reported.</inlineHelpText>
    <label>Accuracy - Check In (m)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>