force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Blank__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Blank__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to map the address fields on the Check In map object.  Since a Check-In has no address, we have to specify blank fields.</inlineHelpText>
    <label>Blank</label>
    <type>Text</type>
</CustomField>