force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Case__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Check-Ins</relationshipLabel>
    <relationshipName>Check_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>