force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Chatter_ID_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Chatter_ID_Check_Out__c</fullName>
    <inlineHelpText>The ID of the Chatter Feed Item that was submitted for this Check Out.</inlineHelpText>
    <label>Chatter ID - Check Out</label>
    <length>18</length>
    <type>Text</type>
</CustomField>