force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Chatter_This__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Chatter_This__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether or not the request wanted the Check In to post to the Chatter feed.</inlineHelpText>
    <label>Chatter This</label>
    <type>Checkbox</type>
</CustomField>