force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Check_Out_Distance_from_Check_In_km__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Check_Out_Distance_from_Check_In_km__c</fullName>
    <description>Check Out Distance from Check In (kilometers)</description>
    <label>Check Out Distance from Check In (km)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>