force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Check_Out_Distance_from_Check_In_miles__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Check_Out_Distance_from_Check_In_miles__c</fullName>
    <description>The distance between the Check In and Check Out in miles.</description>
    <label>Check Out Distance from Check In (miles)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>