force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Contact__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Check-Ins</relationshipLabel>
    <relationshipName>Check_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>