force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Device__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Device__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geopointe Device</label>
    <referenceTo>geopointe__GP_Device__c</referenceTo>
    <relationshipLabel>Geopointe Devices</relationshipLabel>
    <relationshipName>Geopointe_Devices</relationshipName>
    <type>Lookup</type>
</CustomField>