force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Device_Event__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Device_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Device Event</label>
    <referenceTo>geopointe__GP_Device_Event__c</referenceTo>
    <relationshipLabel>Device Events</relationshipLabel>
    <relationshipName>Device_Events</relationshipName>
    <type>Lookup</type>
</CustomField>