force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Device_Event_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Device_Event_Check_Out__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Device Event - Check Out</label>
    <referenceTo>geopointe__GP_Device_Event__c</referenceTo>
    <relationshipLabel>Device Events - Check Out</relationshipLabel>
    <relationshipName>Device_Events_Check_Out</relationshipName>
    <type>Lookup</type>
</CustomField>