force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Distance_from_What_ID_kilometers__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Distance_from_What_ID_kilometers__c</fullName>
    <inlineHelpText>Upon a successful checkin, the distance is calculated from the user&apos;s actual location to the location of the record they checked into (in kilometers).</inlineHelpText>
    <label>Distance from What ID (kilometers)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>