force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geo_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geo Location</label>
    <referenceTo>geopointe__Geo_Location__c</referenceTo>
    <relationshipLabel>Check-Ins</relationshipLabel>
    <relationshipName>Check_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>