force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Geocode__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geocode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geocode</label>
    <referenceTo>geopointe__Geocode__c</referenceTo>
    <relationshipLabel>Check-Ins</relationshipLabel>
    <relationshipName>Check_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>