force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Geopointe_Daily_Summary__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geopointe_Daily_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geopointe Daily Summary</label>
    <referenceTo>geopointe__GP_Daily_Report_Summary__c</referenceTo>
    <relationshipLabel>Geopointe Check-Ins</relationshipLabel>
    <relationshipName>Check_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>