force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Headline__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Headline__c</fullName>
    <inlineHelpText>The headline for the record that is displayed on the maps.</inlineHelpText>
    <label>Headline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>