force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Lead__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Check-Ins</relationshipLabel>
    <relationshipName>Check_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>