force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Map_Link__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Map_Link__c</fullName>
    <label>Map Link</label>
    <type>Url</type>
</CustomField>