force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Map_Link_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Map_Link_Check_Out__c</fullName>
    <label>Map Link - Check Out</label>
    <type>Url</type>
</CustomField>