force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Check-Ins</relationshipLabel>
    <relationshipName>Check_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>