force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Place_ID__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Place_ID__c</fullName>
    <label>Place ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>