force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Pulse_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Pulse_Event_ID__c</fullName>
    <inlineHelpText>The ID of the Pulse Event that caused this Check In to be created</inlineHelpText>
    <label>Pulse Event ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>