force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Pulse_Event_ID_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Pulse_Event_ID_Check_Out__c</fullName>
    <inlineHelpText>The ID of the Pulse Event that caused this Check Out to occur</inlineHelpText>
    <label>Pulse Event ID - Check Out</label>
    <length>18</length>
    <type>Text</type>
</CustomField>