force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Pulse_Map_Object_Device_Id__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Pulse_Map_Object_Device_Id__c</fullName>
    <inlineHelpText>The Device Id of the Pulse Map Object Record that caused this Check In/Out to occur</inlineHelpText>
    <label>Pulse Map Object Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>