force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Task_ID__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Task_ID__c</fullName>
    <inlineHelpText>The ID of the Task Item that was created for this CheckIn</inlineHelpText>
    <label>Task ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>