force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Task_ID_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Task_ID_Check_Out__c</fullName>
    <inlineHelpText>The ID of the Task Item that was created for this Check Out</inlineHelpText>
    <label>Task ID - Check Out</label>
    <length>18</length>
    <type>Text</type>
</CustomField>