force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__What_ID__c.field-meta.xml
<CustomField>
    <fullName>geopointe__What_ID__c</fullName>
    <inlineHelpText>A Salesforce ID referring to the record that the check-in is against</inlineHelpText>
    <label>What ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>