force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__What_Text__c.field-meta.xml
<CustomField>
    <fullName>geopointe__What_Text__c</fullName>
    <inlineHelpText>If a What ID is entered into the record, this field should be populated with the Name of that record.  If not, this field can be populated with text describing what was being checked into.</inlineHelpText>
    <label>What (Text)</label>
    <type>TextArea</type>
</CustomField>