force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__When__c.field-meta.xml
<CustomField>
    <fullName>geopointe__When__c</fullName>
    <defaultValue>now()</defaultValue>
    <inlineHelpText>Date Time of the Check-In</inlineHelpText>
    <label>When</label>
    <type>DateTime</type>
</CustomField>