force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__When_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>geopointe__When_Check_Out__c</fullName>
    <inlineHelpText>Date Time of the Check-Out</inlineHelpText>
    <label>When - Check Out</label>
    <type>DateTime</type>
</CustomField>