force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Where_Check_Out_Latitude__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Where_Check_Out_Latitude__c</fullName>
    <inlineHelpText>The latitude of the Check Out location.</inlineHelpText>
    <label>Where - Check Out (Latitude)</label>
    <precision>14</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>