force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Where_Check_Out_Longitude__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Where_Check_Out_Longitude__c</fullName>
    <inlineHelpText>The longitude of the Check In location.</inlineHelpText>
    <label>Where - Check Out (Longitude)</label>
    <precision>14</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>