force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Who__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Who__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A reference to the user performing the check-in.</inlineHelpText>
    <label>Who</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Check_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>