force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Why_Text__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Why_Text__c</fullName>
    <inlineHelpText>An optional place to put comments related to the check-in</inlineHelpText>
    <label>Why (Text)</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>