force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Why_Text_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Why_Text_Check_Out__c</fullName>
    <label>Why - Check Out</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>