force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Why_Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Why_Type__c</fullName>
    <inlineHelpText>A reason for or type of check-in</inlineHelpText>
    <label>Check In Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile Check-In</fullName>
            </value>
            <value>
                <fullName>geopointe.API Check-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>