force-app/main/default/objects/geopointe__Check_In__c/fields/geopointe__Why_Type_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Why_Type_Check_Out__c</fullName>
    <label>Check Out Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile Check-Out</fullName>
            </value>
            <value>
                <fullName>geopointe.API Check-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>