force-app/main/default/objects/geopointe__Check_In__c/listViews/geopointe__All.listView-meta.xml
<ListView>
    <fullName>geopointe__All</fullName>
    <columns>NAME</columns>
    <columns>geopointe__Who__c</columns>
    <columns>geopointe__When__c</columns>
    <columns>geopointe__Where_Latitude__c</columns>
    <columns>geopointe__Where_Longitude__c</columns>
    <columns>geopointe__What_ID__c</columns>
    <columns>geopointe__What_Text__c</columns>
    <columns>geopointe__Why_Type__c</columns>
    <columns>geopointe__Why_Text__c</columns>
    <columns>geopointe__Distance_from_What_ID_kilometers__c</columns>
    <columns>geopointe__Distance_from_What_ID_miles__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>