force-app/main/default/objects/geopointe__Check_In__c/listViews/geopointe__All1.listView-meta.xml
<ListView>
    <fullName>geopointe__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>